tests/models/enum/named/unit/fail/le.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/le.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
